policies/Kyverno OSS/kyverno__demos/check-ns-labels.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: check-ns
      match:
        resources:
          kinds:
            - Namespace
      exclude:
        clusterRoles:
          - "cluster-admin"
      validate:
        message: >-
          The namespace must have a label "type" with a value "small | medium | large"
        pattern:
          metadata:
            labels:
              type: "small | medium | large"
